syntax = "proto3";
option java_outer_classname = "DatasetProtos";
option java_package = "Protobuf";

message DataSet {
    repeated DataInstance data = 1;
}

message DataInstance {
    int32 game_id = 1;
    repeated double state = 2;
    double value = 3;
    repeated double policy = 4;
}